--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,15 @@ path = "src/bin/server.rs"
 
 [dependencies]
 async-stream = "0.3.0"
-atoi = "0.3.2"
+atoi = "1.0"
 bytes = "1"
 structopt = "0.3.14"
-tokio = { version = "1", features = ["full"] }
-tokio-stream = "0.1"
+tokio = { version = "1.17.0", features = ["full"] }
+tokio-uring = { git = "https://github.com/zojw/tokio-uring", branch = "nodelay" }
+tokio-stream = "0.1.8"
 tracing = "0.1.13"
 tracing-futures = { version = "0.2.3" }
-tracing-subscriber = "0.2.2"
+tracing-subscriber = "0.3"
 
 [dev-dependencies]
 # Enable test-utilities in dev mode only. This is mostly for tests.
